manifests/infrastructure/kargo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kargo
  labels:
    name: kargo
