manifests/infrastructure/kargo/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kargo-api
  namespace: kargo
  labels:
    app.kubernetes.io/name: kargo
    app.kubernetes.io/component: api
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30094
  selector:
    app.kubernetes.io/name: kargo
    app.kubernetes.io/component: api
